Fix control panel overlapping horizontal scroll bar in full screen mode on Chrome

--- a/sass/_controls-panel-layout.scss
+++ b/sass/_controls-panel-layout.scss
@@ -44,6 +44,15 @@
 		box-sizing: border-box;
 		width: $pinned_dither_controls_width;
 		padding: 0;
+
+		//otherwise will overlap chrome scrollbars
+        .full-screen-mode &{
+            bottom: $chrome_fullscreen_horizontal_scrollbar_height;
+        }
+        //firefox takes into account scrollbars and doesn't overlap them
+        .full-screen-mode:-moz-full-screen &{
+            bottom: 0;
+        }
 	}
 
 	.super-dither-controls-container, .global-controls-panel{
